--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -89,7 +89,7 @@
 }
 
 .homeBanner {
-  background-image: url("https://i.imgur.com/kDIwxvt.jpg");
+  background-image: url("https://i.imgur.com/daXcBBQ.jpg");
   width: 100vw;
   height: 350px;
   background-position: right;
@@ -183,10 +183,10 @@
   background-image: url("https://i.imgur.com/FAPePqs.png");
   background-position: left;
   width: 100vw;
-  height: 400px;
+  height: 500px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
 }
 .homePromo div {
   display: flex;
@@ -196,7 +196,7 @@
   align-items: center;
 }
 .homePromo h1 {
-  color: #FFF;
+  color: #fff;
   text-align: center;
 }
 .homePromo p {
@@ -239,11 +239,11 @@
     width: 100%;
     font-size: 28px;
   }
-  .homeBanner .quote {
-    padding-top: 32px;
-  }
   .homeBanner {
     background-position: center;
+  }
+  .homeBanner .quote {
+    padding-top: 32px;
   }
 
   .homeCall {
@@ -318,7 +318,7 @@
     align-content: center;
     margin-bottom: 60px;
   }
-  .homePromo div{
+  .homePromo div {
     width: 50vw;
     padding: 20px;
   }
@@ -333,7 +333,7 @@
     color: #6d6e71;
     padding-bottom: 12px;
   }
-  .homePromo .button{
-  width: auto;
+  .homePromo .button {
+    width: auto;
   }
 }
