--- a/src/Components/SplitBanner/SplitBanner.css
+++ b/src/Components/SplitBanner/SplitBanner.css
@@ -56,6 +56,7 @@
   line-height: 40px;
   text-align: center;
   width: 80%;
+  margin-top: 20px;
 }
 
 .layout_img img:hover {
@@ -77,6 +78,7 @@
   }
   .layout_text p {
     width: 60%;
+    margin-top: 0px;
   }
   .layout_img {
     height: 45vh;
