--- a/src/Components/Dental/dental.css
+++ b/src/Components/Dental/dental.css
@@ -1,6 +1,8 @@
 .dentalBanner {
     height: 500px;
-    background-image: url("https://i.imgur.com/KyEy718.jpg");
+    /* background-image: url("https://i.imgur.com/KyEy718.jpg"); */
+    /* background-image: url("https://i.imgur.com/BwW5lUn.jpg"); */
+    background-image: url("https://i.imgur.com/Xqsv4ud.jpg");
     background-position: right;
   }
 
@@ -9,6 +11,7 @@ font-size: 40px;
 text-align: center;
   }
   .dentalBanner p{
-font-size: 28px;
+font-size: 24px;
 text-align: center;
+width: 80%;
   }
