--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -99,7 +99,8 @@
   }
   .navNumber span{
     font-weight: 100;
-    font-size: 16px;
+    font-size: 16px;   
+    letter-spacing: -1px;
   }
 
   .nav_number_scrolled {
