--- a/src/Components/CallCTA/Call.css
+++ b/src/Components/CallCTA/Call.css
@@ -1,18 +1,17 @@
 .call_wrapper {
-  width: 100vw;
-  background-color: rgba(239, 240, 241, 0.103);
-  padding: 24px 0px;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
+  justify-content: space-around;
   align-items: center;
   box-shadow: 0 0 5px 0 #ccc;
-  /* background-image: linear-gradient(#0a9ad700, #0a9ad777); */
+  width: 100vw;
+  background-image: radial-gradient(#FFF, #f1f2f2d8);
 }
 .call_contianer {
-  padding: 24px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 24px;
 }
 
 .logo {
@@ -35,7 +34,7 @@
   font-size: 24px;
   font-weight: 900;
   line-height: 1.75;
-  padding: 20px 0px;
+  margin-bottom: 20px;
   color: #414042;
 }
 .call_box {
@@ -45,8 +44,9 @@
   text-align: center;
   border: 2px solid #004869;
   border-radius: 2px;
+  cursor: pointer;
 }
-.call_contianer p{
+.call_contianer p {
   margin-top: 24px;
 }
 
@@ -59,6 +59,7 @@
   cursor: pointer;
   transform: scale(1.002);
   background-color: #e7e7e7;
+  border: 2px solid #0a9ad7;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); /* creates a soft blur effect around the element's edges */
 }
 .number {
@@ -73,27 +74,39 @@
 .number:active {
   color: #ffff;
 }
+.number:hover {
+  color: #0a9ad7;
+}
+.time {
+  font-size: 12px;
+  padding: 0px;
+}
+
+.call_wrapper img {
+  height: 100px;
+  padding: 24px 0px;
+}
 
 @media (min-width: 769px) {
   .call_wrapper {
-    width: 40vw;
-    background-color: rgb(239, 240, 241);
+    width: initial;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    flex-direction: row;
     align-items: center;
     margin-bottom: 64px;
+    padding: 40px;
   }
   .call_contianer {
-    padding: 24px 100px;
+    margin-bottom: 0px;
   }
-  .call_contianer p{
+  .call_contianer p {
     margin-top: 12px;
   }
   .logo {
     width: 12vw;
   }
   .call {
-    /* width: 80%; */
     font-size: 24px;
   }
   .call_box {
@@ -102,5 +115,9 @@
   .number {
     padding: 0px 40px;
     font-size: 20px;
+  }
+  .call_wrapper img {
+    height: 180px;
+    padding-left: 24px;
   }
 }
