--- a/src/Components/Medicare/medicare.css
+++ b/src/Components/Medicare/medicare.css
@@ -1,6 +1,6 @@
 .medicareBanner {
   background-image: url("https://i.imgur.com/00jKUMd.jpg");
-  background-position: left;
+  background-position: right;
   width: 100vw;
   height: 400px;
   display: flex;
