--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -88,7 +88,7 @@
   display: flex;
   justify-content: space-around !important;
   align-items: center;
-  padding: 20px 20px;
+  padding: 20px 0px;
 }
 .social_media_icon {
   width: 28px;
@@ -140,9 +140,9 @@
     font-size: 24px;
   }
 
-  .footer_cta p {
+  /* .footer_cta p {
     font-size: 24px;
-  }
+  } */
 
   .footer_phone {
     height: 24px;
