--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -156,34 +156,27 @@
   align-items: center;
 }
 .carrierBanner {
-  width: 80vw;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: row;
-}
-.carrierBanner img {
-  width: 100px;
-  background-color: aquamarine;
-  padding: 0px 12px;
-}
-
-.carrierBanner {
-  background-color: #e6e7e8;
   width: 100vw;
-  height: 150px;
+  background-color: #e6e7e8;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
-
+.carrierBanner img {
+  width: 100px;
+  padding: 12px;
+}
+.smallerIcon {
+  width: 70px !important;
+}
 .homePromo {
   background-image: url("https://i.imgur.com/FAPePqs.png");
   background-position: left;
   width: 100vw;
-  height: 500px;
+  height: 400px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -206,6 +199,28 @@
 }
 .homePromo .button {
   width: 80vw;
+}
+
+.privacy {
+  width: initial;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 24px 0px;
+}
+.privacy div {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.privacy p {
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 0px;
+  color: #939598;
 }
 
 @media (min-width: 769px) {
@@ -310,8 +325,15 @@
   .carrierContainer {
     border-bottom: none;
   }
+  .carrierBanner img {
+    width: 120px;
+    padding: 24px 8px;
+  }
+  .smallerIcon {
+    width: 70px !important;
+  }
   .homePromo {
-    background-position: left;
+    background-position: bottom;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -335,5 +357,12 @@
   }
   .homePromo .button {
     width: auto;
+  }
+  .privacy p {
+    font-size: 18px;
+  }
+  .privacy div {
+    width: 80vw;
+    margin-bottom: 64px;
   }
 }
