--- a/src/Components/Vision/vision.css
+++ b/src/Components/Vision/vision.css
@@ -1,5 +1,5 @@
 .visionBanner {
-  background-image: url("https://i.imgur.com/pGBfIQ1.png");
+  background-image: url("https://i.imgur.com/V5kpgzf.png");
   background-position: left;
   width: 100vw;
   height: 400px;
