--- a/src/Components/Dental/dental.css
+++ b/src/Components/Dental/dental.css
@@ -1,17 +1,15 @@
 .dentalBanner {
-    height: 500px;
-    /* background-image: url("https://i.imgur.com/KyEy718.jpg"); */
-    /* background-image: url("https://i.imgur.com/BwW5lUn.jpg"); */
-    background-image: url("https://i.imgur.com/Xqsv4ud.jpg");
-    background-position: right;
-  }
+  height: 500px;
+  background-image: url("https://i.imgur.com/jYRoMlz.png");
+  background-position: right;
+}
 
-  .dentalBanner h1{
-font-size: 40px;
-text-align: center;
-  }
-  .dentalBanner p{
-font-size: 24px;
-text-align: center;
-width: 80%;
-  }
+.dentalBanner h1 {
+  font-size: 40px;
+  text-align: center;
+}
+.dentalBanner p {
+  font-size: 24px;
+  text-align: center;
+  width: 80%;
+}
