--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -58,7 +58,7 @@
 .learnMoreClosed {
   height: 0px;
   transition: 0.5s all ease;
-  background-image: radial-gradient(#FFF, #f1f2f2);
+  background-image: radial-gradient(#fff, #f1f2f2);
 }
 .learnMoreOpened {
   display: flex;
@@ -66,7 +66,7 @@
   justify-content: top;
   flex-direction: column;
   align-items: center;
-  background-image: radial-gradient(#FFF, #f1f2f2);
+  background-image: radial-gradient(#fff, #f1f2f2);
   transition: 0.5s all ease;
   overflow: scroll;
 }
