--- a/src/Components/SplitBanner/SplitBanner.css
+++ b/src/Components/SplitBanner/SplitBanner.css
@@ -8,7 +8,7 @@
 
 .layout_text {
   width: 100vw;
-  height: 36vh;
+  height: initial;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -33,7 +33,7 @@
 }
 .layout_img {
   width: 100vw;
-  height: 48vh;
+  height: initial;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -44,13 +44,13 @@
 }
 
 .layout_img img {
-  width: 250px;
+  width: 60vw;
   z-index: 1;
   cursor: pointer;
   align-self: center;
 }
 .layout_img p {
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 900;
   color: #fff;
   line-height: 40px;
