--- a/src/Components/Dental/dental.css
+++ b/src/Components/Dental/dental.css
@@ -3,7 +3,13 @@
   background-image: url("https://i.imgur.com/5SegLK5.png");
   background-position: center;
 }
-
+.dentalBanner div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-right: 0px;
+}
 .dentalBanner h1 {
   font-size: 40px;
   text-align: center;
@@ -21,5 +27,8 @@
     height: 400px;
     background-image: url("https://i.imgur.com/jYRoMlz.png");
     background-position: right;
+  }
+  .dentalBanner div {
+    padding-right: 40px;
   }
 }
