--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif; 
   color: #414042;
   max-width: 100vw;
 }
